public/assets/styles/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Decathlon VF', 'Inter', sans-serif;
  list-style: none;
}

/* ACCESSIBILITY VISUALLY HIDDEN */
.visually-hidden {
  clip: rect(0 0 0 0); /* fallback for overflow: hidden */
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.promo-bar {
  background: #3643ba;
  color: #FFFFFF;
  padding: 10px;
  font-size: 14px;
  display: flex;
  font-weight: 400;

  p {
    max-width: 350px;
    justify-content: center;
    text-align: center;
    align-items: center;
    line-height: 1.5em;

    a {
      color: #FFFFFF;
    }
  }
}

/* HEADER */
.header-list {
  display: grid;
  grid-template-columns: auto 1fr auto auto;
  grid-template-rows: auto auto;
  grid-template-areas:
    "menu logo account cart"
    "search search search search";
  align-items: center;
  justify-items: center;
  gap: 10px;
  padding: 10px;

  .menu {
    grid-area: menu;

    .menu-button {
      border: none;
      background-color: unset;
    }
  }

  .logo-item {
    grid-area: logo;
    padding: 5.5px;
    display: flex;
    place-items: center;
  }

  .account {
    grid-area: account;
    display: flex;
    place-items: center;
  }

  .cart {
    grid-area: cart;
    display: flex;
    place-items: center;
  }

  .search {
    grid-area: search;
  }
}

.search-wrapper {
  display: flex;
  align-items: center;
  gap: 8px;
  background: #F5F4F5;
  padding: 10px;
  border-radius: 999px;
  width: 90dvw;
  outline: 2px solid transparent;
  outline-offset: 2px;

  transition: ease-in-out .3s;

  &:focus-within {
    outline-color: #3643ba;
  }

  .search-icon {
    margin-left: .8em;
  }

  input {
    border: none;
    outline: none;
    background: transparent;
    cursor: pointer;

    &:focus::placeholder {
      opacity: 0;
    }
  }
}

/* PRODUCT INFO SECTION */
main {

  .product-detail-title {
    display: grid;
    grid-template-areas:
      "title-icon title" 
    ;
    align-items: center;
    justify-content: start;
    padding: 1em;
    gap: .5em;
    padding-bottom: .8em;

    a {
      text-decoration: unset;

      h1 {
        grid-area: title;
        font-weight: 500;
        font-size: 14px;
        color: #616161;
        line-height: 1.4286;
      }
    }

    .dots-logo {
      grid-area: title-icon;
      fill: #616161;
    }
  }

  /* CAROUSEL */
  .carousel {
    display: flex;
    overflow-x: scroll;
    scroll-snap-type: x mandatory;
    anchor-name: --carousel;
  
    scroll-marker-group: after;

    &::scroll-marker-group {
      position: fixed;
      position-anchor: --carousel;
      position-area: block-end;
      margin: 15px;
      display: grid;
      grid-auto-columns: 20px;
      grid-auto-flow: column;
      gap: 2px;  
    }

    .carousel_slide {
      scroll-snap-align: center;

      &::scroll-marker {
        content: '';
        width: 10px;
        height: 10px;
        background: #E3E6FC;
        border-radius: 50%;
      }

      &::scroll-marker:target-current {
        background: #3643ba;
      }
    }
  }

  .product-info {
    padding: 1em;
    margin-top: 2.5em;

    h2 {
      font-weight: 500;
      font-size: 21px;

    }

    h3 {
      font-size: 26px;
      font-weight: 500;
    }

    h4 {
      color: #616161;
      font-size: 12px;
    }
  }
}

